--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,11 @@
 appname = typego
 httpport = 8080
 runmode = dev
+
+# mysql configuration
+driverName = mysql
+mysqlUser  = typego
+mysqlPwd   = typego
+dbName = typego
+host   = 127.0.0.1
+port   = 3306
